# bazel-scalatest-flyway-example

./: README.md  WORKSPACE  dependencies.yaml  ij.bazelproject  update_dependencies.sh
db/postgres/: docker-compose.yaml
example/src/main/: BUILD.bazel
example/src/main/scala/rv/yatsyna/db/: Calculator.scala
example/src/test/: BUILD.bazel
example/src/test/resources/db/migration/: V1__Create_Initial_Schema.sql  V2__Add_Phone_Numbers.sql
example/src/test/scala/rv/yatsyna/db/: ExampleTest.scala  FlyWayExampleTest.scala  H2ExampleTest.scala  PostgresExampleTest.scala
example/src/test/scala/rv/yatsyna/db/config/: DbConfiguration.scala  H2Configuration.scala  PostgresConfiguration.scala
example/src/test/scala/rv/yatsyna/db/utils/: DbScenario.scala
