load("@io_bazel_rules_scala//scala:scala.bzl", "scala_library", "scala_binary", "scala_test")

scala_library(
    name = "main",
    srcs = glob(
        ["**/*.scala",],
    ),
    visibility = ["//visibility:public"],
    deps = ["@third_party//3rdparty/jvm/org/flywaydb:flyway_core",
                "@third_party//3rdparty/jvm/org/postgresql:postgresql",
            ],
)