load("@io_bazel_rules_scala//scala:scala.bzl", "scala_library", "scala_binary", "scala_test")

filegroup(
    name = "db_resources",
    srcs = glob([
        "resources/db/**/*",
    ]),
    visibility = ["//visibility:public"],
)

scala_test(
    name = "tests",
    srcs = glob(["**/*.scala"]),
    deps = ["@third_party//3rdparty/jvm/com/h2database:h2",
            "@third_party//3rdparty/jvm/org/flywaydb:flyway_core",
            "@third_party//3rdparty/jvm/org/postgresql:postgresql",
            "//example/src/main:main",
            ],
    resources = ["//example/src/test:db_resources"],
)